# casioemu-example-plugin

./: LICENSE  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ExamplePlugin.cpp  PluginApi.h  PluginHelper.hpp
app/src/main/cpp/imgui/: imgui.cpp  imgui_widgets.cpp
app/src/main/java/com/hieuxyz/casioemu/example/: PActivity.kt
gradle/: libs.versions.toml
